[package]
name = "llmflow"
version = "0.1.0"
edition = "2024"
description = "Library for creating agentic workflows"
authors = ["Akshay <ajagekar.akshay@gmail.com>"]

[dependencies]
tokio = { version = "1.45", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0"

[lib]
name = "llmflow"
path = "src/lib.rs"

[[bin]]
name = "llmflow-example"
path = "src/main.rs"
